content/gitops/applications/apache/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apache-network-policy
spec:
  podSelector:
    matchLabels:
      app: apache
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector: {}
